# first_rust_practice

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20230131195849_initial-tables.sql  20230201095034_telegram_id_to_user.sql  20230201095529_drop_telegram_id_to_user.sql  20230201100634_drop_telegram_id_column.sql
src/: main.rs
src/todolist/: mod.rs  models.rs  services.rs  tasks.rs
templates/: test.html
