[package]
name = "todo_list_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.68"
apalis = { version = "0.3.6", features = ["redis"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
